test : Computer 테스트 코드에서 중복되는 코드 메소드로 추출